--- a/index.html
+++ b/index.html
@@ -91,11 +91,13 @@
             <h2>
                Amatriciana
             </h2>
+                    <img src="imagenes/amatriciana.jpg"width="290" height="240"Align="TOP">        
         </li>
         <li> 
             <h2>
                 Aceite de Oliva
             </h2>
+                    <img src="imagenes/oliva.jpg"widht="150"height="180"Align="TOP">
         </li>
     </ul>
     
@@ -108,36 +110,42 @@
             <h2>
                 Jamon Serrano
             </h2>
+                    <img src="imagenes/jamon serrano.jpg"widht="150"height="180"Align="TOP">
         </li> 
         <li>
             <h2>
                 Jamon
             </h2>
+                    <img src="imagenes/jamon.png"widht="120"height="140"Align="TOP">
         </li>
         <li>
             <h2>
                 Pepperoni
             </h2>
+                    <img src="imagenes/peperoni.jpg"widht="150"height="180"Align="TOP">
         </li>
         <li>
             <h2>
                 Salami
             </h2>
+                    <img src="imagenes/salami (2).jpg"widht="150"height="180"Aling="TOP">
         </li>
         <li>
             <h2>
                 Tocineta
             </h2>
+                    <img src="imagenes/tocineta.jpg"widht="150"height="180"Aling="TOP">
         </li>
         <li>
             <h2>
                 Salchicha
             </h2>
-        </li>
+                    <img src="imagenes/salchicha.jpg"width="230"height="220"Aling="TOP">
         <li>
             <h2>
                 Huevos Benedictinos
             </h2>
+                    <img src="imagenes/huevos.jpg"widht="150"height="180"Aling="TOP">
         </li>
     </ul>
     <OL> <h2>
@@ -148,6 +156,7 @@
             <h2>
                 Tomates Asados
             </h2>
+                
         </li>
         <li>
             <h2>
